# mipa-gamebot

./: mybot.py  pyproject.toml
cogs/: basiccog.py  gamecog.py  utilitycog.py
cogs/modules/: settings.py  utils.py  weather.py  youna.py
cogs/modules/files/: .env.sample  weather_area.json
